Add meta tags and update routing in App.jsx and main.jsx

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Trại gà Minh Tân Phát chuyên cung cấp trứng sạch, chất lượng cao với tiêu chuẩn an toàn thực phẩm. Hãy khám phá nguồn cung ứng đáng tin cậy của chúng tôi."
+    />
+    <meta
+      name="keywords"
+      content="trại gà, minh tan phat, minh tân phát, trại gà minh tân phát, Trại gà Minh Tân Phát, trứng gà bình dương, Trứng gà sạch Bình Dương, trứng sạch, chất lượng cao, an toàn thực phẩm, nguồn cung ứng đáng tin cậy"
+    />
+    <meta name="author" content="Tên tác giả" />
     <title>Trại Gà Minh Tân Phát</title>
   </head>
   <body>
